stateDiagram-v2
    [*] --> Pendiente : Generación automática (cron según frecuencia)

    Pendiente --> Pagada : Registrar Pago (monto total)
    Pendiente --> Parcial : Registrar Pago (monto parcial, si habilitado)
    Pendiente --> Vencida : Cron diario (fechaVencimiento < hoy)

    Parcial --> Pagada : Pago restante
    Parcial --> Vencida : Cron diario

    Vencida --> Pagada : Registrar Pago (con recargo si aplica)

    Pagada --> [*]
    state Vencida {
        [*] --> NotificacionPendiente
        NotificacionPendiente --> NotificacionEnviada : Email OK
        NotificacionPendiente --> NotificacionFallida : 3 reintentos fallidos
    }
